--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
     "classnames": "^2.5.1",
     "firebase": "^12.6.0",
     "react": "^18.2.0",
